# OPMAS

./: .cursorignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  start_opmas.sh
backend/config/: action_allowlist.yaml  database.yaml  knowledge_base.yaml  opmas_config.yaml
backend/scripts/: ingest_log_file.py  init_db.py  migrate_config_to_db.py  run_api.py  run_application_agent.py  run_connectivity_agent.py  run_database_agent.py  run_log_parser.py  run_network_agent.py  run_orchestrator.py  run_performance_agent.py  run_security_agent.py  run_storage_agent.py  run_system_agent.py  run_wifi_agent.py  send_log_file_to_api.py  setup_db.sh
backend/src/opmas/: __init__.py  config.py  data_models.py  log_ingestor.py  main.py  orchestrator.py  parsing_utils.py
backend/tests/: conftest.py  pytest.ini  test_agents.py  test_application_agent.py  test_connectivity_agent.py  test_core_integration.py  test_database_agent.py  test_log_ingestion.py  test_log_parser.py  test_models.py  test_network_agent.py  test_orchestrator.py  test_performance_agent.py  test_security_agent.py  test_storage_agent.py  test_system_agent.py  test_wifi_agent.py
backend/tests/e2e/: test_log_processing_workflow.py  test_scenario.py
backend/tests/integration/: test_agent_management.py  test_workflow.py
backend/tests/unit/: test_device.py  (+1 more)
(+380 files in other folders)
